# S2_NDVI_BSI_TrueImage_Generator

./: .gitignore  README.md  main.py  pyproject.toml
output/: buffer_20000m.dbf  buffer_20000m.shp  buffer_20000m.shx  crown_point.dbf  crown_point.shp  crown_point.shx  drainage_lines.shp  drainage_lines.shx
src/s2ndvi_bsi_dem/: drainage.py  elevation.py  point_buffer.py  sentinel2.py
